2013-07-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/sys-driver.boot (initializeGlobalState): Tell GCL not to
	use buggy fast links.

2013-07-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/sys-utility.boot (makeFilename): Tidy.

2013-07-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/g-util.boot (relativeDirname): New.  Abstract differences
	between Common Lisp semantics and traditional semantics (GCL).
	* interp/c-util.boot (moveLibdirByCopy): Use it.

2013-06-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* lisp/core.lisp.in (maxIndex): Provide function definition for
	the benefit of rotted GCL systems.

2013-06-29  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/sockio.h (accept_connection): Take no argument.
	(server): Adjust type.
	* lib/sockio-c.c: Implement changes.
	* hyper/spadint.c (accept_menu_server_connection): Adjust use of
	server.
	* sman/session.c (manage_sessions): Likewise.
	* sman/sman.c (manage_spad_io): Likewise.

2013-06-28  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* gui/conversation.cc (accumulate_paragraphs): Remove.
	(read_output): Remove.
	(OutputTextArea::add_paragraph): Rewrite.
	(Conversation::read_reply): Likewise.

2013-06-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* src/rt: New directory.  Move vm.cc and Lisp.cc here.
	* rt/Database.cc: New.
	* include/Database.H: Likewise.
	* include/Constructor.H: Likewise.
	* gui/server.h (Server): Cache database input souece.
	* gui/gui.pro.in (LIBS): Add core runtime library.
	* Makefile.am (oa_src_include_headers): Add Constructor.H and
	Database.H.

2013-06-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/Lisp.H: New.
	* utils/Lisp.cc: Likewise.
	* gui/server.h (Server::lisp): Give access to embedded Lisp evaluator.
	* gui/main-window.cc (MainWind::read_databases): Use embedded Lisp
	evaluator.
	* include/vm.H: Move from src/utils/.